! parsesmileys() would search for every smiley twice (once in a normal version, once in a htmlspecialchar'ed version), even if they were the same. It also applied htmlspecialchar to a same string three times in a row... Oh please, come on! (Subs-BBC.php) * Optimized parsesmileys() replacement code. Both versions are lightning fast. The new version is 10 to 20% slower when the string has no smileys, but 2 to 5 times faster when it meets one or more smileys. (Subs-BBC.php) * Optimized the block replacement function code. Replaced the super-cool regexp with a lame series of strpos calls. The new version is much faster when using hundreds of blocks, but a bit slower with few blocks (could be made faster by removing the case-sensitivity code.) It's still more robust anyway, and easier to understand. (Subs.php) * Providing a means for the playlist area to know whether the album link should be shown. Yeah I know -- extra query... (Aeva-Foxy.php) * Simplified media menu and fixed current area highlighting. (Aeva-Gallery.php) ! Fixed headers in playlist area. (Aeva-Foxy.php) ! Some areas didn't properly rename Aeva-Subs to Subs-Media. (Aeva-Subs-Vital.php, Subs-Media.php, Subs-BBC.php, Subs.php, Who.php) ! Converted the Aeva Media changelog to UTF8, to avoid errors at parse time. This will eventually be used in the Wedge changelog, hopefully. (default/aeva/changelog.txt) * Minor button strip fixes. Hopefully the new forced overflows won't break anything. (Media.template.php, index.css) ! .title2 link color should be the same as when not linked. (index.css)

--- a/Themes/default/styles/index.css
+++ b/Themes/default/styles/index.css
@@ -1141,12 +1141,13 @@ dl#rss
 		color: #faf8f8
 
 .title2 extends .title
-	color: channels(gray,0,0,30%)
 	font-size: 1.2em
 	background: none
 	border-bottom: 1px dotted rgba(0,0,0, .5)
 	border-radius: 0
 	text-shadow: white 0 1px 2px
+	&, a
+		color: channels(gray,0,0,30%)
 
 .cat final, .title final
 	font: bold 10pt/18px Verdana
@@ -1352,6 +1353,7 @@ table
 
 .buttonlist
 	margin-right: -8px
+	overflow: hidden
 	ul
 		padding: 5px
 		margin: 0 .2em 0 0
